spikes/shapes/shape-evidence/tests/ui/fail/implement_evidence.stderr
error[E0277]: the trait bound `Forged: shape_evidence_spike::sealed::Sealed` is not satisfied
 --> tests/ui/fail/implement_evidence.rs:5:24
  |
5 | impl ShapeEvidence for Forged {
  |                        ^^^^^^ the trait `shape_evidence_spike::sealed::Sealed` is not implemented for `Forged`
  |
  = help: the following other types implement trait `shape_evidence_spike::sealed::Sealed`:
            Exact<S>
            Rank<R>
note: required by a bound in `ShapeEvidence`
 --> src/lib.rs
  |
  | pub trait ShapeEvidence: sealed::Sealed + 'static {
  |                          ^^^^^^^^^^^^^^ required by this bound in `ShapeEvidence`
  = note: `ShapeEvidence` is a "sealed trait", because to implement it you also need to implement `shape_evidence_spike::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following types implement the trait:
            shape_evidence_spike::Rank<R>
            shape_evidence_spike::Exact<S>
